--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  position: relative;
 }
 
 .container {
@@ -31,9 +32,10 @@ h1 {
 #message-text {
   font-size: 24px;
   margin-bottom: 20px;
-  min-height: 80px;
+  min-height: 10px;
   color: #3a3a3a; /* Dark gray */
 }
+
 
 #btn-generate {
   padding: 10px 20px;
@@ -49,6 +51,64 @@ h1 {
 #btn-generate:hover {
   background-color: #7d3a95; /* Darker purple */
 }
+
+#btn-copy {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #8e44ad; /* Purple */
+  color: #ffffff; /* White */
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: none;
+  margin-top: 10px;
+}
+
+#btn-copy:hover {
+  background-color: #7d3a95; /* Darker purple */
+}
+
+.social-media-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.social-media-buttons a {
+  margin: 0 10px;
+}
+
+.social-media-buttons i {
+  font-size: 24px;
+  color: #8e44ad; /* Purple */
+  cursor: pointer;
+}
 #message-text .cursor {
   color: #8e44ad; /* Change the color of the cursor as desired */
+}
+
+/* Thank you message container */
+.thank-you-container {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: transparent; /* Invisible background */
+  text-align: center;
+  padding: 10px 20px;
+}
+
+/* Thank you message text */
+.thank-you-text {
+  color: #8e44ad; /* Purple, adjust the color to match your theme */
+  font-size: 16px;
+}
+
+/* Styling for the email link */
+.thank-you-text a {
+  color: #8e44ad; /* Match the link color to the theme */
+  text-decoration: underline;
 }
